--- a/static_files/index.html
+++ b/static_files/index.html
@@ -23,6 +23,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="icons.js" type="text/jsx"></script>
     <script src="app.js" type="text/jsx"></script>
 
     <script type="text/babel">
