--- a/react_app/public/index.html
+++ b/react_app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="this is me website."
+      content="Rate baby names for you and your partner."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Alex Pegg</title>
+    <title>Finding Nameo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
